Agregada tarea de gradle para generar código en infra y domain